Cambios realizados desde la carpeta clonada

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Ejercicio 1</h1>
     <h2>Cambios realizados</h2>
+    <h2>Cambios realizados desde la capeta clonada</h2>
 </body>
 </html>
